@@ -1,4 +1,7 @@
 
+=== (next) ===
+BREAKING CHANGE: browser entry points to non-processed ES6 file
+
 === 1.7.0 (2017-12-07) ===
 BREAKING CHANGE: converted all code to ES6
 BREAKING CHANGE: introduced FTN7 v1.7 request limit zones
